--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,12 @@
       href="https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+      classname="Icons"
+    />
     <title>Keep N</title>
-
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
